objects/APTS_Configurator_Admin__c.object
<CustomObject>
    <fields>
        <fullName>APTS_BU__c</fullName>
        <formula>Factory_Location__r.BU__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Configurator_ID__c</fullName>
        <label>Configurator ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Configurator_Platform__c</fullName>
        <label>Configurator Platform</label>
        <picklist>
            <picklistValues>
                <fullName>Nextra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Selectica (Ludvika)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Selectica (Non-Ludvika)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EngineX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Treffo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EConfig</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PP Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ConfigIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iConSE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Selectica</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Copy_Action_Parameter__c</fullName>
        <description>When Action = Copy pass this parameter</description>
        <label>Copy Action Parameter</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>APTS_Launch_In_New_Window__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to indicate whether the configurator will be opened in new window or not</description>
        <label>Launch In New Window</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Manual_BU_Entry__c</fullName>
        <label>Manual BU Entry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_No_Access_Messaging__c</fullName>
        <label>No Access Messaging</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>APTS_Pricing_Required_asynchronous__c</fullName>
        <defaultValue>false</defaultValue>
        <description>States whether asynchronous pricing is required from within the inbound Save operation (called by the configurator)</description>
        <inlineHelpText>States whether asynchronous pricing is required from within the inbound Save operation (called by the configurator)</inlineHelpText>
        <label>Pricing Required (asynchronous)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ATPS_Call_TechData_API__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether calling of TechData API is required</description>
        <inlineHelpText>Whether calling of TechData API is required</inlineHelpText>
        <label>Call TechData API</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BAL_ID__c</fullName>
        <formula>Factory_Location__r.BALId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The BAL ID derived from the factory location</inlineHelpText>
        <label>BAL ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Configurator_Description__c</fullName>
        <inlineHelpText>The description of this configurator</inlineHelpText>
        <label>Configurator Description</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Configurator_URL__c</fullName>
        <inlineHelpText>The static URL of the configurator</inlineHelpText>
        <label>Configurator URL</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Factory_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The location with which this configurator is associated. Helps in determining which configurator needs to be launched for a selected product, and corresponding BAL ID</inlineHelpText>
        <label>Factory Location</label>
        <referenceTo>ABB_Location__c</referenceTo>
        <relationshipLabel>Configurator Admins</relationshipLabel>
        <relationshipName>Configurator_Admins</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Disabled_Description__c</fullName>
        <inlineHelpText>Holds the message that the Admin wants to display to the users when the configurator is inactive/disabled</inlineHelpText>
        <label>Is Disabled Description</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enables/disables the launch of this configurator</inlineHelpText>
        <label>Is Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Action_Paramater__c</fullName>
        <description>When Action = New pass this parameter</description>
        <label>New Action Parameter</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reconfig_Action_Parameter__c</fullName>
        <description>Action = Reconfig pass these paramteres</description>
        <label>Reconfig Action Parameter</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>URL_Parameters__c</fullName>
        <inlineHelpText>A string place holder that shall be of the following format:
E.g.: TenderId={proposal.proposalId__c}&amp;LineItemId={lineItem.Id}</inlineHelpText>
        <label>URL Parameters</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>URL_Parameters_fixed__c</fullName>
        <description>Fixed URL parameters, e.g.,
company=APTTUS
includeWaterMark=true</description>
        <label>URL Parameters (fixed)</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Configurator Admin</label>
    <listViews>
        <fullName>APTS_EPDS_Configurators</fullName>
        <columns>NAME</columns>
        <columns>APTS_Configurator_ID__c</columns>
        <columns>Configurator_Description__c</columns>
        <columns>Configurator_URL__c</columns>
        <columns>Is_Disabled__c</columns>
        <columns>Is_Disabled_Description__c</columns>
        <columns>APTS_Manual_BU_Entry__c</columns>
        <columns>APTS_No_Access_Messaging__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APTS_Manual_BU_Entry__c</field>
            <operation>equals</operation>
            <value>EPMV</value>
        </filters>
        <label>EPDS Configurators</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>APTS_IAMA_Configurators</fullName>
        <columns>NAME</columns>
        <columns>APTS_Configurator_ID__c</columns>
        <columns>Configurator_Description__c</columns>
        <columns>Configurator_URL__c</columns>
        <columns>Is_Disabled__c</columns>
        <columns>Is_Disabled_Description__c</columns>
        <columns>APTS_Manual_BU_Entry__c</columns>
        <columns>APTS_No_Access_Messaging__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APTS_Manual_BU_Entry__c</field>
            <operation>equals</operation>
            <value>IAMA</value>
        </filters>
        <label>IAMA Configurators</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>APTS_PGHV_Configurators</fullName>
        <columns>NAME</columns>
        <columns>APTS_Configurator_ID__c</columns>
        <columns>Configurator_Description__c</columns>
        <columns>Configurator_URL__c</columns>
        <columns>Is_Disabled__c</columns>
        <columns>Is_Disabled_Description__c</columns>
        <columns>APTS_Manual_BU_Entry__c</columns>
        <columns>APTS_No_Access_Messaging__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APTS_Manual_BU_Entry__c</field>
            <operation>equals</operation>
            <value>PGHV</value>
        </filters>
        <label>PGHV Configurators</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>APTS_PGTR_Configurators</fullName>
        <columns>NAME</columns>
        <columns>APTS_Configurator_ID__c</columns>
        <columns>Configurator_Description__c</columns>
        <columns>Is_Disabled__c</columns>
        <columns>Configurator_URL__c</columns>
        <columns>Is_Disabled_Description__c</columns>
        <columns>APTS_Manual_BU_Entry__c</columns>
        <columns>APTS_No_Access_Messaging__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APTS_Manual_BU_Entry__c</field>
            <operation>equals</operation>
            <value>PGTR</value>
        </filters>
        <label>PGTR Configurators</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>APTS_Configurator_ID__c</columns>
        <columns>Configurator_Description__c</columns>
        <columns>Configurator_URL__c</columns>
        <columns>Is_Disabled__c</columns>
        <columns>Is_Disabled_Description__c</columns>
        <columns>APTS_Manual_BU_Entry__c</columns>
        <columns>APTS_No_Access_Messaging__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Configurator Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configurator Admins</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>